# TAFFY

./: README.md  main.py  pyproject.toml
connections/: wikipedia.py
src/taffy/: main.py
src/taffy/connections/: stack_exchange.py  wikipedia.py
src/taffy/utils/: enums.py  helpers.py  output_text_generators.py  response_parsing.py
taffy/: main.py
utils/: enums.py  response_parsing.py
