[project]
name = "taffy"
version = "0.1.0"
description = "The Answer Finder for You"
readme = "README.md"
authors = [
    { name = "Char Alvarez" }
]
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.34.2",
    "typer>=0.26.7",
]

[project.scripts]
taffy = "taffy.main:app"


[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"
